<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UCEvent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event">EventActivity</string>



    <string name="parse_app_id">WoGC0sgQSfEmQyfYBMtQ0iImzgTG3TmQZYFROtYo</string>
    <string name="parse_client_id">0uyGE5SGTg7szwgz9ZetTzBpD5wcR2pu6vKqgOSF</string>
    <string name="parse_client_key">0uyGE5SGTg7szwgz9ZetTzBpD5wcR2pu6vKqgOSF</string>

    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="sign_in">Sign In</string>

    <!-- Strings for Facebook Integration -->
    <string name ="facebook_app_id">1482728195350912</string>

    <!-- Strings for Updating Parse Acc Details -->
    <string name ="Update">Update</string>
    <string name="prompt_set_username">Username</string>
    <string name="prompt_set_password">Password</string>
    <string name="prompt_set_password_again">Password Again</string>

    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Your are logged in as</string>
    <string name="profile_logout_button_label">Log out</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_signup">signup</string>
    <string name="yup">I accept the terms and conditions.</string>

    <!-- Strings for New/Edit Event Pages -->
    <string name="app_logo">UCEvent</string>
    <string name="setting_ic">ic</string>
    <string name="add_new">addNew</string>
    <string name="Previous_button">Previous_button</string>
    <string name="Go_back">Go Back</string>
    <string name="Edit_event">Edit Event</string>
    <string name="Title_edit">Title:</string>
    <string name="new_event">New Event</string>
    <string name="category">Category:</string>
    <string name="Date">Date:</string>
    <string name="Time">Time:</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="Location">Location:</string>
    <string name="Description">Description:</string>
    <string name="Contact">Contact:</string>
    <string name="Submit">Submit</string>
    <string name="Save">Save</string>
    <string name="hint_location">Enter Event Location...</string>
    <string name="hint_title">Enter Event Title...</string>
    <string name="hint_desc">Enter Description(optional-max 140 char)</string>
    <string name="hint_contact">Only specify if logged in with Facebook</string>

    // use in alert dialog
    <string name="dialog_message">Are you sure you want to delete your event?</string>
    <string name="dialog_title">Delete Event</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string-array name="category_list">
        <item>Greek Life</item>
        <item>Free Food</item>
        <item>Club GBM</item>
        <item>Fundraiser</item>
        <item>Guest Speaker</item>
        <item>Performance</item>
        <item>Recreational</item>
        <item>Special Event</item>
    </string-array>

    <string name="title_activity_categories">categories</string>
    <string name="title_activity_events_popular">events_popular</string>
    <string name="title_activity_home">Home</string>

    <string name="view_selected_event"><![CDATA[View Selected Events >]]></string>
    <string name="events">Events</string>
    <string name="my_events">My Events</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="save_settings">Save Settings and Go Back</string>
    <string name="title_activity_event_detail" />
    <string name="new_password">New Password</string>
    <string name="curr_password">Current Password</string>

</resources>
