<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.unify.ucevent.categories">
<FrameLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:id="@+id/textView14"
        android:layout_gravity="left|center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_events"
        android:id="@+id/textView15"
        android:layout_gravity="right|center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:clickable="true" />
</FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="40dp"
        android:id="@+id/frameLayout2">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="474dp"
            android:textAlignment="center"
            android:id="@+id/listView"
            android:paddingTop="20dp"
            android:paddingBottom="0dp"
            android:choiceMode="multipleChoiceModal"
            android:layout_gravity="right|top">

        </ListView>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:layout_below="@+id/frameLayout2">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_selected_event"/>
    </FrameLayout>


</RelativeLayout>
