<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
    android:clickable="false"
    android:orientation="vertical"
    tools:context="com.unify.ucevent.settings">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#ff2397f3"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:background="#00000000"
            android:contentDescription="@string/setting_ic"
            android:src="@drawable/ic_action_settings"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/uc_event_logo" />

        <Button
            android:id="@+id/new_event"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:text="+"
            android:textSize="40sp"
            android:onClick="goToNewEvent"
            android:textColor="#ffffffff" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout7"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/textView9"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/abc_text_size_large_material"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_gravity="center_vertical|left|top"
            android:layout_marginTop="30dp"
            android:textColor="#ff000000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frameLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout8"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_username"
            android:id="@+id/textView10"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/abc_text_size_large_material" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText5"
            android:layout_gravity="left|top"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:textColor="#ff000000" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="360dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_set_password_again"
            android:id="@+id/textView12"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/abc_text_size_large_material" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText7"
            android:layout_gravity="left|top"
            android:layout_marginTop="40dp"
            android:inputType="textPassword"
            android:textColor="#ff000000" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:id="@+id/logout_button"
            android:layout_gravity="center_horizontal|bottom"
            android:onClick="logout"
            android:background="#fff3897f"
            android:textColor="#ffffffff"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_settings"
            android:id="@+id/save_settings_button"
            android:layout_gravity="center"
            android:background="#ff2397f3"
            android:textColor="#ffffffff"
            android:focusable="false"
            android:layout_marginTop="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </FrameLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_password"
        android:id="@+id/textView11"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_gravity="left|top"
        android:layout_below="@+id/frameLayout8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText6"
        android:layout_gravity="left|top"
        android:inputType="textPassword"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:textColor="#ff000000"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />


</RelativeLayout>
